--- a/estilo.css
+++ b/estilo.css
@@ -1,3 +1,9 @@
+h1 {
+  font-family: sans-serif;
+  font-size: 18px;
+  text-align: center;
+}
+
 body {
    color: #000;
    background-color: #fff;
@@ -32,6 +38,13 @@ body {
    clear: both;
    margin: 0;
    padding: 1em 0;
+}
+
+.wrap {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
 .wrap a:hover {
